--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "gm": "^1.23.1",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.22.2"
   },
   "optionalDependencies": {
     "node-webcam": "^0.4.5"
