--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "real-photo-booth",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Real photo booth software",
   "main": "main.js",
   "scripts": {
@@ -12,12 +12,15 @@
     "electron": "^3.0.10",
     "electron-installer-zip": "^0.1.2",
     "electron-packager": "^12.2.0",
-    "eslint": "^5.9.0"
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
     "gm": "^1.23.1",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "mkdirp": "^0.5.1",
     "moment": "^2.22.2"
   },
