--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -12,5 +12,6 @@
     "mark", "math", "meter", "noscript", "object", "output", "progress", "q", "ruby", "s", "samp", "select", "small",
     "span", "strong", "sub", "sup", "template", "textarea", "time", "u", "var", "video", "wbr", "text", "acronym",
     "address", "big", "dt", "ins", "small", "strike", "tt", "pre", "h1", "h2", "h3", "h4", "h5", "h6"
-  ]
+  ],
+  "operator_position": "after-newline"
 }
