--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
     "url": "https://github.com/siburny/real-photo-booth.git"
   },
   "devDependencies": {
-    "electron": "^6.1.7",
+    "electron": "^13.1.4",
     "electron-installer-zip": "^0.1.2",
-    "electron-packager": "^14.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.19.1"
+    "electron-packager": "^15.2.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4"
   },
   "dependencies": {
+    "@electron/remote": "^1.2.0",
     "font-awesome": "^4.7.0",
     "gm": "^1.23.1",
-    "handlebars": "^4.5.3",
-    "jquery": "^3.5.0",
-    "lodash": "^4.17.15",
-    "mkdirp": "^0.5.1",
-    "moment": "^2.24.0"
+    "handlebars": "^4.7.7",
+    "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
+    "mkdirp": "^1.0.4",
+    "moment": "^2.29.1"
   }
 }
