--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "real-photo-booth",
-  "version": "0.2.5",
+  "version": "0.3.0",
   "description": "Real photo booth software",
   "main": "main.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "electron": "^6.1.7",
     "electron-installer-zip": "^0.1.2",
     "electron-packager": "^14.1.1",
+    "electron-rebuild": "^2.3.5",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.19.1"
@@ -29,6 +30,7 @@
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "mkdirp": "^0.5.1",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "serialport": "^9.0.7"
   }
 }
