--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: Build/release
 
-on:
+on: 
   push:
     tags:
       - 'v*'
@@ -23,4 +23,4 @@ jobs:
         with:
           build_script_name: skip-bulding
           github_token: ${{ secrets.github_token }}
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          release: true
