--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,6 @@ jobs:
         with:
           node-version: lts/*
 
+      - run: npm ci
       - run: npm run build 
-      
       - run: npm run zip
